improve(pdf): try to fix area image blurry for high dpi screen

--- a/src/main/frontend/extensions/pdf/pdf.css
+++ b/src/main/frontend/extensions/pdf/pdf.css
@@ -586,6 +586,7 @@ input::-webkit-inner-spin-button {
       img {
         margin: 0;
         box-shadow: none;
+        max-width: 80%;
       }
     }
   }
